<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">时差闹钟</string>

    <string name="cancel">取消</string>

    <string name="progress_tip">正在加载...请稍等。</string>

    <string name="toolbar_add">add</string>

    <string name="title_select">选择城市</string>
    <string name="title_search">搜索城市</string>

    <string name="beijing">北京</string>

    <string name="set_repeat_y">重复</string>
    <string name="set_repeat_n">单次</string>

    <string name="delete_success">删除成功</string>

    <string name="update_title">应用更新</string>
    <string name="update_ok">更新</string>
    <string name="update_permission_fail">缺少写文件权限，请前往手机设置允许应用写文件</string>
    <string name="update_now">立即更新</string>
    <string name="update_already">已是最新版本</string>

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>


    <!-- 默认对话框-->
    <string name="dialog_title">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_msg_home">是否删除该时区?\n与该城市相关的闹钟将一并删除</string>
    <string name="dialog_msg_clock">是否删除该时钟</string>

    <!-- alarm-->
    <string name="alarm_item_tip">%1$s时间：%2$s&#160;%3$s</string>
    <string name="alarm_page_title">闹钟列表</string>
    <!-- set-->
    <string name="set_title">设置闹钟</string>

    <string name="city_dialog_nation">&#160;-&#160;%1$s</string>

    <string name="set_alarm_map_count">请选择闹钟对应国家</string>
    <string name="set_alarm_repeat_day">请选择重复日期</string>

    <string name="set_alarm_will_ring">闹钟将在%1$d小时%2$d分钟后响铃</string>

    <string name="set_alarm_hour">小时</string>
    <string name="set_alarm_minute">分</string>
    <string name="set_alarm_city">时区城市</string>
    <string name="set_alarm_city1">城市</string>

    <string name="set_alarm_choose_city">选择闹钟城市</string>

    <!-- left_drawer -->
    <string name="left_drawer_tip_advice">意见反馈</string>
    <string name="left_drawer_tip_exchange">汇率转换</string>
    <string name="left_drawer_tip_widget">使用插件须知</string>
    <string name="left_drawer_tip_widget_1">使用须知</string>
    <string name="left_drawer_tip_widget_2">因手机系统保护，彻底退出APP后桌面插件无法正常运转，可打开APP后，隐藏在后台，则可正常显示。</string>
    <string name="left_drawer_tip_share">分享</string>
    <string name="left_drawer_tip_setting">我的设置</string>

    <!-- advice -->
    <string name="advice_title">意见反馈</string>
    <string name="advice_btn">提交</string>
    <string name="advice_hint_1">您的每一个建议，都是我们产品进步的方向，十分感谢您的支持^^.</string>
    <string name="advice_hint_2">如果愿意，请留下您的联系方式，我们给予您及时的反馈。</string>
    <string name="advice_toast">将你的建议写下来吧～</string>


    <string name="advice_ques_tip">本期求解:</string>
    <string name="advice_ques_1">1.你还想要什么功能？</string>
    <string name="advice_ques_2">2.现在有哪些不满意的地方？</string>

    <!-- modify -->
    <string name="modify_title">修改闹钟</string>

    <!-- about -->
    <string name="about_me">关于版本</string>
    <string name="about_version_name_now">当前版本：%1$s</string>
    <string name="about_version_name_new">最新版本：%1$s</string>
    <string name="about_version_name_info">更新内容：</string>

    <!-- voice -->
    <string name="voice_name">铃声</string>
    <string name="voice_level">音量</string>
    <string name="voice_sound">声音</string>
    <string name="voice_default">默认</string>


    <!-- money -->
    <string name="money_coin_name">%1$s%2$s = ></string>

    <!-- home -->
    <string name="home_city_action_tip_move">第一个城市为所在城市，不能够移动</string>
    <string name="home_city_action_tip_remove">第一个城市为所在城市，不能够删除</string>

    <!-- ratio -->
    <string name="exchange_ratio_title">汇率转换</string>
    <string name="exchange_ratio_tip_source_d">输入转换数额：</string>
    <string name="exchange_ratio_tip_target_d">转换后数额：</string>
    <string name="exchange_ratio_tip_source">输入转换数额：（%1$s）</string>
    <string name="exchange_ratio_tip_target">转换后数额：（%1$s）</string>
    <string name="exchange_ratio_choose">选择</string>
    <string name="exchange_ratio_request_fail">获取汇率失败，请稍后再试</string>

    <string name="exchange_ratio_now">当前汇率：</string>
    <string name="exchange_ratio_update_time">更新时间：</string>

    <!-- setting -->
    <string name="setting_title">设置</string>

    <string name="setting_block_show">显示相关</string>
    <string name="setting_is_use_24">启用24小时显示</string>
    <string name="setting_is_use_ratio">汇率信息显示</string>

    <string name="setting_block_language">语言切换</string>
    <string name="setting_language_china">中文</string>
    <string name="setting_language_english">英文</string>

    <string name="setting_widget_style">插件样式</string>

    <string name="setting_widget_style_black">经典黑</string>
    <string name="setting_widget_style_empty">透明色</string>
    <string name="setting_widget_style_blue">浅浅蓝</string>
    <string name="setting_widget_style_yellow">浅浅黄</string>
    <string name="setting_widget_style_green">浅浅绿</string>
    <string name="setting_widget_style_pink">浅浅粉</string>

    <string name="setting_widget_style_toast">已选择%1$s</string>

    <string name="setting_restart">重启后生效</string>

    <!-- select search-->
    <string name="select_search_keyword">输入地区关键字</string>
    <string name="state_europe">欧洲</string>
    <string name="state_asia">亚洲</string>
    <string name="state_africa">非洲</string>
    <string name="state_america">美洲</string>
    <string name="state_oceania">大洋洲</string>

    <!-- ring -->
    <string name="ring_notify_after">稍后提醒</string>
    <string name="ring_push_up_to_cancel">向上滑动取消闹钟</string>


</resources>
