<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/ll_advice_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/layout_toolbar"/>

        <EditText
            android:id="@+id/et_advice_1"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/advice_hint_1"
            android:textSize="15sp"
            android:background="@drawable/bg_corner_white_line_primary"/>

        <EditText
            android:id="@+id/et_advice_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:gravity="top"
            android:textSize="15sp"
            android:maxLength="25"
            android:hint="@string/advice_hint_2"
            android:background="@drawable/bg_corner_white_line_primary" />

        <TextView
            android:id="@+id/tv_advice_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/advice_btn"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/bg_corner_primary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_advice_main"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_30"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="本期求解:"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="1.你还想要什么功能？"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="2.如果换个名字，叫啥好？"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_advice_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="客服扣扣号：3303847677"/>

    </LinearLayout>



</RelativeLayout>