<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_padding_top"
        android:background="@color/primary_black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary_white">
        <ImageView
            android:id="@+id/iv_back"
            android:src="@drawable/icon_back_black"
            android:scaleType="centerInside"
            android:paddingLeft="@dimen/margin_10"
            android:paddingRight="@dimen/margin_10"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_default"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_select"
            android:textColor="@color/primary_black"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_vertical"
            android:layout_centerInParent="true"/>


        <ImageView
            android:id="@+id/iv_return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/icon_home"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"/>

    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_size"
        android:background="@color/primary_line_gray"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_select_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_select_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_select_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_35"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:background="@drawable/bg_corner_white_line_gray2"
                android:paddingLeft="@dimen/margin_10"
                android:gravity="center_vertical"
                android:text="@string/select_search_keyword"
                android:textSize="16sp"
                android:textColor="@color/first_title_color"
                />



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_search"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_20"
                android:padding="@dimen/margin_10"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_europe"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:elevation="@dimen/margin_10"
                android:background="@drawable/selector_btn_primary">



                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_europe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:roundedCornerRadius="3dp"
                    fresco:actualImageScaleType="centerCrop"/>


                <TextView
                    android:id="@+id/tv_europe"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/margin_10"
                    android:layout_alignParentBottom="true"
                    android:text="@string/state_europe"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/bg_corner_tran_b_lr"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_asia"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:elevation="@dimen/margin_10"
                android:background="@drawable/selector_btn_primary">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_asia"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:roundedCornerRadius="3dp"
                    fresco:actualImageScaleType="centerCrop"/>


                <TextView
                    android:id="@+id/tv_asia"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/margin_10"
                    android:layout_alignParentBottom="true"
                    android:text="@string/state_asia"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/bg_corner_tran_b_lr"
                    />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_africa"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:elevation="@dimen/margin_10"
                android:background="@drawable/selector_btn_primary">



                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_africa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:roundedCornerRadius="3dp"
                    fresco:actualImageScaleType="centerCrop"/>


                <TextView
                    android:id="@+id/tv_africa"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/margin_10"
                    android:layout_alignParentBottom="true"
                    android:text="@string/state_africa"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/bg_corner_tran_b_lr"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_america"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:elevation="@dimen/margin_10"
                android:background="@drawable/selector_btn_primary">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_america"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:roundedCornerRadius="3dp"
                    fresco:actualImageScaleType="centerCrop"/>


                <TextView
                    android:id="@+id/tv_america"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/margin_10"
                    android:layout_alignParentBottom="true"
                    android:text="@string/state_america"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/bg_corner_tran_b_lr"
                    />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_oceania"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:elevation="@dimen/margin_10"
                android:background="@drawable/selector_btn_primary">



                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/sdv_oceania"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    fresco:roundedCornerRadius="3dp"
                    fresco:actualImageScaleType="centerCrop"/>


                <TextView
                    android:id="@+id/tv_oceania"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:ems="1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/margin_10"
                    android:layout_alignParentBottom="true"
                    android:text="@string/state_oceania"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:background="@drawable/bg_corner_tran_b_lr"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="130dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp">

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>